Updating description for weekly matchup tools

--- a/src/main/resources/templates/weekly-matchups.html
+++ b/src/main/resources/templates/weekly-matchups.html
@@ -93,7 +93,10 @@
     <div class="container-fluid">
       <h1 class="mt-4">Weekly Matchups</h1>
       <p>Make selections from the dropdowns in the menu and choose a team to see how that team
-        compares against other teams for a given week. </p>
+        compares against other teams for a given week. This is based on real-time data, not
+        projections. This page shows: taking the whole week's data into account, how many
+        categories would you win against each of your
+        opponents? </p>
       <div class="table-responsive">
         <table id="matchups" class="table table-bordered table-hover" style="width:100%">
           <thead class="thead-dark">
