Fixing Sonar bugs, code smells, unit test coverage, and refactoring into smaller methods

--- a/src/main/resources/templates/examples.html
+++ b/src/main/resources/templates/examples.html
@@ -51,7 +51,7 @@
       </figure>
       <div id="weeklyMatchupsModal" class="modal">
         <span class="close">&times;</span>
-        <img class="modal-content" id="img01">
+        <img class="modal-content" id="img01" alt="weekly matchups page">
         <div id="caption"></div>
       </div>
     </div>
