--- a/src/main/resources/templates/weekly-matchups.html
+++ b/src/main/resources/templates/weekly-matchups.html
@@ -33,7 +33,7 @@
       rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Navigation Menu">
   <button class="navbar-toggler" type="button" data-toggle="collapse"
           data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -109,7 +109,7 @@
 
   <div id="page-content-wrapper">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom" aria-label="Toggle Menu">
       <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
     </nav>
 
@@ -121,7 +121,7 @@
         categories would you win against each of your
         opponents? </p>
       <div class="table-responsive">
-        <table id="matchups" class="table table-bordered table-hover" style="width:100%">
+        <table aria-label="Weekly Matchups" id="matchups" class="table table-bordered table-hover" style="width:100%">
           <thead class="thead-dark">
           <tr>
             <th scope="col">Opponent</th>
