--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -18,6 +18,9 @@
     gtag('js', new Date());
 
     gtag('config', 'G-JZ9VG9K2M0');
+
+
+
   </script>
 
   <link rel="stylesheet"
@@ -41,7 +44,11 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Fantasy Basketball Tools</h1>
-    <p class="lead">Free tools to make your fantasy basketball league more interesting.</p>
+    <p class="lead">Free tools to make your fantasy basketball league more interesting.
+      <br/>An
+      equivalent for ESPN users is <a href="https://espnfantasy.warrencrasta.com/" target="_blank"
+                                      rel="noopener"><u>here</u></a>.
+    </p>
     <p class="lead">
       <a href="/oauth2/authorization/yahoo" class="btn btn-lg btn-secondary">Sign in with Yahoo!</a>
     </p>
@@ -51,7 +58,9 @@
 
   <footer class="mt-auto">
     <div class="inner">
-      <p>Tools created by <a href="https://twitter.com/warrencrasta" target="_blank" rel="noopener"><u>@warrencrasta</u></a>. Project hosted on <a href="https://github.com/wcrasta/yahoo-fantasy-basketball" target="_blank" rel="noopener"><u>GitHub</u></a>.</p>
+      <p>Tools created by <a href="https://twitter.com/warrencrasta" target="_blank" rel="noopener"><u>@warrencrasta</u></a>.
+        Project hosted on <a href="https://github.com/wcrasta/yahoo-fantasy-basketball"
+                             target="_blank" rel="noopener"><u>GitHub</u></a>.</p>
     </div>
   </footer>
 </div>
