Updating contact info

--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -58,8 +58,8 @@
 
   <footer class="mt-auto">
     <div class="inner">
-      <p>Tools created by <a href="https://twitter.com/warrencrasta" target="_blank" rel="noopener"><u>@warrencrasta</u></a>.
-        Project hosted on <a href="https://github.com/wcrasta/yahoo-fantasy-basketball"
+      <p>Tools created by <a href="https://www.linkedin.com/in/warrencrasta/" target="_blank" rel="noopener"><u>Warren Crasta</u></a>.
+        Project available on <a href="https://github.com/wcrasta/yahoo-fantasy-basketball"
                              target="_blank" rel="noopener"><u>GitHub</u></a>.</p>
     </div>
   </footer>
