Update Ubuntu, Java & Node, Sort teams, Handle null myStats

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -50,7 +50,7 @@
     <div class="inner">
       <p>Tools created by <a href="https://www.linkedin.com/in/warrencrasta/" target="_blank" rel="noopener"><u>Warren Crasta</u></a>.
         Project available on <a href="https://github.com/wcrasta/yahoo-fantasy-basketball"
-                             target="_blank" rel="noopener"><u>GitHub</u></a>.</p>
+                             target="_blank" rel="noopener"><u>GitHub</u></a>.
       </p>
     </div>
   </footer>
