--- a/src/main/resources/templates/weekly-matchups.html
+++ b/src/main/resources/templates/weekly-matchups.html
@@ -44,9 +44,12 @@
       <li class="nav-item">
         <a class="nav-link" href="/signin">Home</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/weekly-matchups">Weekly Matchups<span
+      <li class="nav-item active"> <a class="nav-link" href="/weekly-matchups">Weekly Matchups<span
             class="sr-only">(current)</span></a>
+      </li>
+      
+      <li class="nav-item"> 
+        <a class="nav-link" href="/strength-of-schedule">Remaining Schedule Strength</a>
       </li>
     </ul>
     <ul class="navbar-nav">
