--- a/src/main/resources/templates/live-standings.html
+++ b/src/main/resources/templates/live-standings.html
@@ -2,21 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Weekly Matchups">
-  <meta name="keywords" content="Fantasy Basketball, Yahoo">
+  <meta name="description" content="Live Standings">
   <meta name="author" content="Warren Crasta">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Weekly Matchups</title>
+  <title>Live Standings</title>
 
   <link rel="icon" type="image/png" href="/images/favicon.png"/>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JZ9VG9K2M0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-JZ9VG9K2M0');
   </script>
 
@@ -28,10 +25,8 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/dataTables.bootstrap4.min.css"
         integrity="sha512-PT0RvABaDhDQugEbpNMwgYBCnGCiTZMh9yOzUsJHDgl/dMhD9yjHAwoumnUk3JydV3QTcIkNDuN40CJxik5+WQ=="
         crossorigin="anonymous"/>
-  <link
-      href="/css/weekly-matchups.css"
-      rel="stylesheet">
-</head>
+  <link href="/css/weekly-matchups.css" rel="stylesheet">
+  <link href="/css/sos.css" rel="stylesheet"> </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Navigation Menu">
   <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -44,17 +39,16 @@
       <li class="nav-item">
         <a class="nav-link" href="/signin">Home</a>
       </li>
-      <li class="nav-item active"> <a class="nav-link" href="/weekly-matchups">Weekly Matchups<span
-            class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="/weekly-matchups">Weekly Matchups</a>
       </li>
-      
-      <li class="nav-item"> 
-        <a class="nav-link" href="/strength-of-schedule">Remaining Schedule Strength</a>
+      <li class="nav-item">
+        <a class="nav-link" href="/strength-of-schedule">Fikstür Zorluğu (SoS)</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/power-rankings">Power Rankings</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="/live-standings">Live Standings<span class="sr-only">(current)</span></a>
       </li>
     </ul>
@@ -73,82 +67,54 @@
 </nav>
 
 <div class="d-flex" id="wrapper">
-
   <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading">Pick a Team</div>
+    <div class="sidebar-heading">Seçim Yapın</div>
     <div class="list-group list-group-flush">
       <div class="list-group-item list-group-item-action bg-light">
-        <select name="season"
-                id="season"
-                required="required"
-                style="width: 100%">
+        <select name="season" id="season" required="required" style="width: 100%">
           <option disabled="disabled" selected="selected">Select a Season</option>
-          <option th:each="season : ${seasons}" th:value="${season.id}"
-                  th:text="${season.year}"></option>
+          <option th:each="season : ${seasons}" th:value="${season.id}" th:text="${season.year}"></option>
         </select>
       </div>
-
       <div class="list-group-item list-group-item-action bg-light">
-        <select name="league"
-                id="league"
-                required="required"
-                style="width: 100%">
+        <select name="league" id="league" required="required" style="width: 100%">
           <option disabled="disabled" selected="selected">Select a League</option>
-        </select>
-      </div>
-
-      <div class="list-group-item list-group-item-action bg-light">
-        <select name="week" id="week"
-                required="required"
-                style="width: 100%">
-          <option disabled="disabled" selected="selected">Select a Week</option>
-        </select>
-      </div>
-
-      <div class="list-group-item list-group-item-action bg-light">
-        <select name="team"
-                id="team"
-                required="required"
-                style="width: 100%">
-          <option disabled="disabled" selected="selected">Select a Team</option>
         </select>
       </div>
     </div>
   </div>
-
   <div id="page-content-wrapper">
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom" aria-label="Toggle Menu">
       <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
     </nav>
 
     <div class="container-fluid">
-      <h1 class="mt-4">Weekly Matchups</h1>
-      <p>Make selections from the dropdowns in the menu and choose a team to see how that team
-        compares against other teams for a given week. This is based on real-time data, not
-        projections. This page shows: taking the whole week's data into account, how many
-        categories would you win against each of your
-        opponents? </p>
+      <h1 class="mt-4">Live Standings (Canlı Puan Durumu)</h1>
+      <p>
+        Bu tablo, resmi puan durumuna <b>şu an oynanmakta olan</b> haftanın canlı skorlarını ekleyerek oluşturulmuştur.
+        Pazartesi sabahı göreceğiniz muhtemel puan durumudur.
+      </p>
+
       <div class="table-responsive">
-        <table aria-label="Weekly Matchups" id="matchups" class="table table-bordered table-hover" style="width:100%">
+        <table aria-label="Live Standings" id="live-standings-table" class="table table-bordered table-hover" style="width:100%">
           <thead class="thead-dark">
-          <tr>
-            <th scope="col">Opponent</th>
-            <th scope="col">Categories Won</th>
-            <th scope="col">Categories Lost</th>
-            <th scope="col">Categories Tied</th>
-          </tr>
+            <tr>
+              <th scope="col">Sıra</th>
+              <th scope="col">Takım Adı</th>
+              <th scope="col">Canlı Derece (K-B-M)</th>
+              <th scope="col">Galibiyet % (.XYZ)</th>
+            </tr>
           </thead>
           <tbody>
-          <tr class="table-secondary text-center">
-            <td colspan="4">Select a team to view weekly matchups.</td>
-          </tr>
+             <tr class="table-secondary text-center">
+                <td colspan="4">Verileri görmek için bir lig seçin.</td>
+             </tr>
           </tbody>
         </table>
       </div>
     </div>
   </div>
-</div>
+  </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
@@ -163,7 +129,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-<script src="/js/weekly-matchups.js"></script>
+
+<script src="/js/live-standings.js"></script>
+
 </body>
 </html>
-
