--- a/src/main/resources/templates/power-rankings.html
+++ b/src/main/resources/templates/power-rankings.html
@@ -2,15 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Strength of Schedule">
-  <meta name="author" content="Warren Crasta">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Strength of Schedule</title> <link rel="icon" type="image/png" href="/images/favicon.png"/>
-  
+  <meta name="description" content="Power Rankings">
+  <title>Power Rankings</title> <link rel="icon" type="image/png" href="/images/favicon.png"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" ...>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/dataTables.bootstrap4.min.css" ...>
   <link href="/css/weekly-matchups.css" rel="stylesheet">
-</head>
+  <link href="/css/sos.css" rel="stylesheet"> </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Navigation Menu">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -18,28 +15,20 @@
       <li class="nav-item">
         <a class="nav-link" href="/signin">Home</a>
       </li>
-      <li class="nav-item"> <a class="nav-link" href="/weekly-matchups">Weekly Matchups</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/strength-of-schedule">Remaining Schedule Strength<span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="/weekly-matchups">Weekly Matchups</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/power-rankings">Power Rankings</a>
+        <a class="nav-link" href="/strength-of-schedule">Fikstür Zorluğu (SoS)</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/power-rankings">Power Rankings<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/live-standings">Live Standings<span class="sr-only">(current)</span></a>
       </li>
     </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
-      <li class="nav-item">
-        <a class="nav-link" href="javascript: document.logoutForm.submit()">Log Out</a>
-        <form name="logoutForm" th:action="@{/logout}" method="post" hidden="hidden">
-          <input type="submit" value="Log Out"/>
-        </form>
-      </li>
-    </ul>
-  </div>
+    </div>
 </nav>
 
 <div class="d-flex" id="wrapper">
@@ -52,41 +41,37 @@
           <option th:each="season : ${seasons}" th:value="${season.id}" th:text="${season.year}"></option>
         </select>
       </div>
-
       <div class="list-group-item list-group-item-action bg-light">
         <select name="league" id="league" required="required" style="width: 100%">
           <option disabled="disabled" selected="selected">Select a League</option>
         </select>
       </div>
-      
-      </div>
+    </div>
   </div>
   <div id="page-content-wrapper">
-    <nav class.="navbar navbar-expand-lg navbar-light bg-light border-bottom" aria-label="Toggle Menu">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom" aria-label="Toggle Menu">
       <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
     </nav>
-
     <div class="container-fluid">
-      <h1 class="mt-4">Kalan Fikstür Zorluğu (SoS)</h1>
+      <h1 class="mt-4">Power Rankings (Güç Sıralaması)</h1>
       <p>
-        Bu tablo, ligdeki her takımın kalan maçlarının zorluğunu gösterir. 
-        Puan, takımın kalan rakiplerinin lig sıralamalarının ortalamasıdır.
+        Bu sıralama, her takımın o haftaya kadar ligdeki DİĞER TÜM takımlara karşı oynadığı (varsayımsal) maçlardaki kategorik galibiyet yüzdesine (.XYZ) dayanır.
       </p>
-      <p><b>Düşük Puan = Zor Fikstür</b> (Güçlü rakiplerle oynayacak)</p>
-      <p><b>Yüksek Puan = Kolay Fikstür</b> (Zayıf rakiplerle oynayacak)</p>
+      <p><b>Puan = (Kazanılan Kategoriler + (0.5 * Berabere Kalınan Kategoriler)) / Toplam Oynanan Kategoriler</b></p>
       
       <div class="table-responsive">
-        <table aria-label="Strength of Schedule" id="sos-table" class="table table-bordered table-hover" style="width:100%">
+        <table aria-label="Power Rankings" id="pr-table" class="table table-bordered table-hover" style="width:100%">
           <thead class="thead-dark">
             <tr>
               <th scope="col">Sıra</th>
               <th scope="col">Takım Adı</th>
-              <th scope="col">Fikstür Zorluk Puanı (SoS)</th>
+              <th scope="col">Galibiyet Yüzdesi</th>
+              <th scope="col">Derece (K-B-M)</th> 
             </tr>
           </thead>
           <tbody>
              <tr class="table-secondary text-center">
-                <td colspan="3">Verileri görmek için bir lig seçin.</td>
+                <td colspan="4">Verileri görmek için bir lig seçin.</td>
              </tr>
           </tbody>
         </table>
@@ -99,7 +84,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/dataTables.bootstrap4.min.js" ...></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" ...></script>
 
-<script src="/js/strength-of-schedule.js"></script>
+<script src="/js/power-rankings.js"></script>
 
 </body>
 </html>
