--- a/src/main/resources/templates/live-standings.html
+++ b/src/main/resources/templates/live-standings.html
@@ -1,136 +1,49 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/main}">
 <head>
-  <meta charset="utf-8">
-  <meta name="description" content="Live Standings">
-  <meta name="author" content="Warren Crasta">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Live Standings</title>
-
-  <link rel="icon" type="image/png" href="/images/favicon.png"/>
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JZ9VG9K2M0"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-JZ9VG9K2M0');
-  </script>
-
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/dataTables.bootstrap4.min.css"
-        integrity="sha512-PT0RvABaDhDQugEbpNMwgYBCnGCiTZMh9yOzUsJHDgl/dMhD9yjHAwoumnUk3JydV3QTcIkNDuN40CJxik5+WQ=="
-        crossorigin="anonymous"/>
-  <link href="/css/weekly-matchups.css" rel="stylesheet">
-  <link href="/css/sos.css" rel="stylesheet"> </head>
+</head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Navigation Menu">
-  <button class="navbar-toggler" type="button" data-toggle="collapse"
-          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-          aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/signin">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/weekly-matchups">Weekly Matchups</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/strength-of-schedule">Fikstür Zorluğu (SoS)</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/power-rankings">Power Rankings</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/live-standings">Live Standings<span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/contact">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="javascript: document.logoutForm.submit()">Log Out</a>
-        <form name="logoutForm" th:action="@{/logout}" method="post" hidden="hidden">
-          <input type="submit" value="Log Out"/>
-        </form>
-      </li>
-    </ul>
-  </div>
-</nav>
 
-<div class="d-flex" id="wrapper">
-  <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading">Seçim Yapın</div>
-    <div class="list-group list-group-flush">
-      <div class="list-group-item list-group-item-action bg-light">
-        <select name="season" id="season" required="required" style="width: 100%">
-          <option disabled="disabled" selected="selected">Select a Season</option>
-          <option th:each="season : ${seasons}" th:value="${season.id}" th:text="${season.year}"></option>
-        </select>
-      </div>
-      <div class="list-group-item list-group-item-action bg-light">
-        <select name="league" id="league" required="required" style="width: 100%">
-          <option disabled="disabled" selected="selected">Select a League</option>
-        </select>
-      </div>
+<main layout:fragment="content">
+  
+  <div class="glass-card"> 
+    
+    <div class="card-header p-3">
+      <h1 class="h4 mb-0">Live Standings</h1>
     </div>
-  </div>
-  <div id="page-content-wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom" aria-label="Toggle Menu">
-      <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-    </nav>
-
-    <div class="container-fluid">
-      <h1 class="mt-4">Live Standings (Canlı Puan Durumu)</h1>
-      <p>
-        Bu tablo, resmi puan durumuna <b>şu an oynanmakta olan</b> haftanın canlı skorlarını ekleyerek oluşturulmuştur.
-        Pazartesi sabahı göreceğiniz muhtemel puan durumudur.
+    
+    <div class="card-body">
+      <p class="text-muted small"> This table shows the projected standings by combining the official standings with the live scores from the current week.
       </p>
 
       <div class="table-responsive">
-        <table aria-label="Live Standings" id="live-standings-table" class="table table-bordered table-hover" style="width:100%">
-          <thead class="thead-dark">
-            <tr>
-              <th scope="col">Sıra</th>
-              <th scope="col">Takım Adı</th>
-              <th scope="col">Canlı Derece (K-B-M)</th>
-              <th scope="col">Galibiyet % (.XYZ)</th>
+        <table aria-label="Live Standings" id="live-standings-table" 
+               class="table table-striped table-hover align-middle"> 
+               
+          <thead class="thead-dark"> <tr>
+              <th scope="col">Rank</th>
+              <th scope="col">Team Name</th>
+              <th scope="col">Live Record (W/L/T)</th>
+              <th scope="col">Win Pct.</th>
             </tr>
           </thead>
           <tbody>
              <tr class="table-secondary text-center">
-                <td colspan="4">Verileri görmek için bir lig seçin.</td>
+                <td colspan="4">Select a league to view data.</td>
              </tr>
           </tbody>
         </table>
       </div>
-    </div>
-  </div>
-  </div>
+    </div> 
+  </div> 
+</main>
 
-<script src="https://code.jquery.com/jquery-3.5.1.js"
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
-        integrity="sha512-BkpSL20WETFylMrcirBahHfSnY++H2O1W+UnEEO4yNIl+jI2+zowyoGJpbtk6bx97fBXf++WJHSSK2MV4ghPcg=="
-        crossorigin="anonymous"></script>
-<script
-    src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/dataTables.bootstrap4.min.js"
-    integrity="sha512-OQlawZneA7zzfI6B1n1tjUuo3C5mtYuAWpQdg+iI9mkDoo7iFzTqnQHf+K5ThOWNJ9AbXL4+ZDwH7ykySPQc+A=="
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-
-<script src="/js/live-standings.js"></script>
+<th:block layout:fragment="page-scripts">
+  <script th:src="@{/js/live-standings.js}"></script>
+</th:block>
 
 </body>
 </html>
