--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -23,7 +23,7 @@
     </select>
   </div>
 
-  <th:block th:if="${#httpServletRequest.getRequestURI() == '/weekly-matchups'}">
+  <th:block th:if="${#httpServletRequest.getRequestURI() == '/matchup-comparisons'}">
     
     <hr class="my-2"> 
     
