--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Warren Crasta & Atakan">
 
-  <title layout:title-pattern="$CONTENT_TITLE | Fantasy Tools">Fantasy Tools</title>
+  <title layout:title-pattern="$CONTENT_TITLE | Fantasy Toys">Fantasy Toys</title>
   <link rel="icon" type="image/png" href="/images/favicon.png"/>
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,11 +17,11 @@
   
   <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.bootstrap5.min.css">
   
-  <link href="/css/weekly-matchups.css" rel="stylesheet">
+  <link href="/css/matchup-comparisons.css" rel="stylesheet">
 </head>
 <body> <nav class="navbar navbar-expand-lg glass-navbar" aria-label="Navigation Menu">
   <div class="container-fluid">
-    <a class="navbar-brand fw-bold" th:href="@{/signin}">🏀 Fantasy Tools</a>
+    <a class="navbar-brand fw-bold" th:href="@{/signin}">🏀 Fantasy Toys</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -29,14 +29,20 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" th:href="@{/weekly-matchups}" th:classappend="${#httpServletRequest.getRequestURI() == '/weekly-matchups' ? 'active' : ''}">Matchup Comparisons</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/matchup-comparisons}" th:classappend="${#httpServletRequest.getRequestURI() == '/matchup-comparisons' ? 'active' : ''}">Matchup Comparisons</a></li>
         <li class="nav-item"><a class="nav-link" th:href="@{/strength-of-schedule}" th:classappend="${#httpServletRequest.getRequestURI() == '/strength-of-schedule' ? 'active' : ''}">Remaining Schedule Strength</a></li>
         <li class="nav-item"><a class="nav-link" th:href="@{/power-rankings}" th:classappend="${#httpServletRequest.getRequestURI() == '/power-rankings' ? 'active' : ''}">Power Rankings</a></li>
         <li class="nav-item"><a class="nav-link" th:href="@{/live-standings}" th:classappend="${#httpServletRequest.getRequestURI() == '/live-standings' ? 'active' : ''}">Live Standings</a></li>
       </ul>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" th:href="@{/contact}">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="javascript: document.logoutForm.submit()">Log Out</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="javascript: document.logoutForm.submit()">Sign Out</a>
+          
+          <form name="logoutForm" th:action="@{/logout}" method="post" hidden="hidden">
+            <input type="submit" value="Log Out"/>
+          </form>
+          
+        </li>
       </ul>
     </div>
   </div>
