--- a/src/main/resources/templates/matchup-comparisons.html
+++ b/src/main/resources/templates/matchup-comparisons.html
@@ -41,7 +41,7 @@
     </div> </div> </main>
 
 <th:block layout:fragment="page-scripts">
-  <script th:src="@{/js/weekly-matchups.js}"></script>
+  <script th:src="@{/js/matchup-comparisons.js}"></script>
 </th:block>
 
 </body>
