--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -2,74 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Free Fantasy Basketball Tools">
-  <meta name="keywords" content="Fantasy Basketball, Yahoo">
-  <meta name="author" content="Warren Crasta">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Fantasy Basketball Tools</title>
+  <meta name="description" content="Free Fantasy Basketball Tools for Yahoo">
+  <meta name="author" content="Atakan"> <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Fantasy Toys - Sign In</title>
 
   <link rel="icon" type="image/png" href="/images/favicon.png"/>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JZ9VG9K2M0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-JZ9VG9K2M0');
-
-
-
   </script>
 
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/signin.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/modern-theme.css" rel="stylesheet">
+  
 </head>
 
-<body class="text-center">
-<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-  <header class="masthead mb-auto">
-    <div class="inner">
-      <nav class="nav nav-masthead justify-content-center">
-      </nav>
+<body class="signin-body text-center" data-bs-theme="dark">
+
+<main class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-4 col-md-6 col-sm-8">
+      
+      <div class="glass-card p-4 p-md-5">
+        
+        <h1 class="h2 fw-bold mb-3">Fantasy Toys</h1>
+        
+        <p class="lead mb-4">
+          This app allows you to analyze your Fantasy Basketball team in more detail. It requires access to your league data.
+        </p>
+        
+        <p class="lead">
+          <a href="/oauth2/authorization/yahoo" class="btn btn-gradient-primary btn-lg fw-bold">
+            Sign in with Yahoo!
+          </a>
+        </p>
+        
+        
+      </div>
+      
     </div>
-  </header>
+  </div>
+</main>
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Fantasy Basketball Tools</h1>
-    <p class="lead">Free tools to make your fantasy basketball league more interesting.
-      <br/>An
-      equivalent for ESPN users is <a href="https://espnfantasy.warrencrasta.com/" target="_blank"
-                                      rel="noopener"><u>here</u></a>.
-    </p>
-    <p class="lead">
-      <a href="/oauth2/authorization/yahoo" class="btn btn-lg btn-secondary">Sign in with Yahoo!</a>
-    </p>
-    <p><small>The application needs access to your league data. No action is ever taken without your
-      consent.</small></p>
-  </main>
-
-  <footer class="mt-auto">
-    <div class="inner">
-      <p>Tools created by <a href="https://www.linkedin.com/in/warrencrasta/" target="_blank" rel="noopener"><u>Warren Crasta</u></a>.
-        Project available on <a href="https://github.com/wcrasta/yahoo-fantasy-basketball"
-                             target="_blank" rel="noopener"><u>GitHub</u></a>.</p>
-    </div>
-  </footer>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
