--- a/src/main/resources/templates/weekly-matchups.html
+++ b/src/main/resources/templates/weekly-matchups.html
@@ -13,7 +13,7 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JZ9VG9K2M0"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
+    globalThis.dataLayer = globalThis.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
